--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
+  }
 }
