--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://leotamminen.github.io/react-millionaire",
+  "homepage": "https://jonathandeininger.github.io/react-quiz-hatespeech-milionaire-theme/",
   "name": "frontend",
   "version": "1.0.0",
   "description": "",
